create gpa cal function for grades

--- a/ClientOne/src/clientone/StudentDetailsJFrame.form
+++ b/ClientOne/src/clientone/StudentDetailsJFrame.form
@@ -140,7 +140,7 @@
                           <Group type="102" attributes="0">
                               <Component id="jLabel3" min="-2" pref="60" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="txtScs1101" min="-2" pref="55" max="-2" attributes="0"/>
+                              <Component id="txtScs1101" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="32767" attributes="0"/>
                               <Component id="jLabel6" min="-2" pref="69" max="-2" attributes="0"/>
                           </Group>
@@ -149,12 +149,13 @@
                                   <Group type="102" attributes="0">
                                       <Component id="jLabel5" min="-2" pref="60" max="-2" attributes="0"/>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      <Component id="txtScs1103" min="-2" pref="55" max="-2" attributes="0"/>
+                                      <Component id="txtScs1103" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="1" attributes="0">
                                       <Component id="jLabel4" min="-2" pref="60" max="-2" attributes="0"/>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      <Component id="txtScs1102" min="-2" pref="55" max="-2" attributes="0"/>
+                                      <Component id="txtScs1102" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                               <Group type="103" groupAlignment="0" attributes="0">
@@ -170,13 +171,13 @@
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace pref="43" max="32767" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="txtScs1105" alignment="1" min="-2" pref="54" max="-2" attributes="0"/>
-                          <Component id="txtScs1106" alignment="1" min="-2" pref="54" max="-2" attributes="0"/>
-                          <Component id="txtScs1104" alignment="1" min="-2" pref="54" max="-2" attributes="0"/>
+                          <Component id="txtScs1104" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtScs1105" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtScs1106" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                      <EmptySpace pref="70" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -185,26 +186,28 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabel6" alignment="0" min="-2" pref="22" max="-2" attributes="0"/>
+                          <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                              <Component id="jLabel6" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
+                              <Component id="txtScs1104" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabel3" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
                               <Component id="txtScs1101" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="txtScs1104" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel4" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
-                          <Component id="txtScs1102" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel7" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
-                          <Component id="txtScs1105" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
+                          <Component id="txtScs1102" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtScs1105" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="txtScs1106" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
                           <Component id="jLabel8" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
-                          <Component id="txtScs1103" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel5" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
+                          <Component id="txtScs1103" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtScs1106" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -216,45 +219,156 @@
                 <Property name="text" type="java.lang.String" value="SCS 1101"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="txtScs1101">
-            </Component>
             <Component class="javax.swing.JLabel" name="jLabel4">
               <Properties>
                 <Property name="text" type="java.lang.String" value="SCS 1102"/>
               </Properties>
-            </Component>
-            <Component class="javax.swing.JTextField" name="txtScs1102">
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel5">
               <Properties>
                 <Property name="text" type="java.lang.String" value="SCS 1103"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="txtScs1103">
-            </Component>
             <Component class="javax.swing.JLabel" name="jLabel6">
               <Properties>
                 <Property name="text" type="java.lang.String" value="SCS 1104"/>
               </Properties>
-            </Component>
-            <Component class="javax.swing.JTextField" name="txtScs1104">
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtScs1104ActionPerformed"/>
-              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel7">
               <Properties>
                 <Property name="text" type="java.lang.String" value="SCS 1105"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="txtScs1105">
-            </Component>
             <Component class="javax.swing.JLabel" name="jLabel8">
               <Properties>
                 <Property name="text" type="java.lang.String" value="SCS 1106"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="txtScs1106">
+            <Component class="javax.swing.JComboBox" name="txtScs1101">
+              <Properties>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                  <StringArray count="13">
+                    <StringItem index="0" value="A+"/>
+                    <StringItem index="1" value="A"/>
+                    <StringItem index="2" value="A-"/>
+                    <StringItem index="3" value="B+"/>
+                    <StringItem index="4" value="B"/>
+                    <StringItem index="5" value="B-"/>
+                    <StringItem index="6" value="C+"/>
+                    <StringItem index="7" value="C"/>
+                    <StringItem index="8" value="C-"/>
+                    <StringItem index="9" value="D+"/>
+                    <StringItem index="10" value="D"/>
+                    <StringItem index="11" value="D-"/>
+                    <StringItem index="12" value="E"/>
+                  </StringArray>
+                </Property>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JComboBox" name="txtScs1102">
+              <Properties>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                  <StringArray count="13">
+                    <StringItem index="0" value="A+"/>
+                    <StringItem index="1" value="A"/>
+                    <StringItem index="2" value="A-"/>
+                    <StringItem index="3" value="B+"/>
+                    <StringItem index="4" value="B"/>
+                    <StringItem index="5" value="B-"/>
+                    <StringItem index="6" value="C+"/>
+                    <StringItem index="7" value="C"/>
+                    <StringItem index="8" value="C-"/>
+                    <StringItem index="9" value="D+"/>
+                    <StringItem index="10" value="D"/>
+                    <StringItem index="11" value="D-"/>
+                    <StringItem index="12" value="E"/>
+                  </StringArray>
+                </Property>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JComboBox" name="txtScs1103">
+              <Properties>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                  <StringArray count="13">
+                    <StringItem index="0" value="A+"/>
+                    <StringItem index="1" value="A"/>
+                    <StringItem index="2" value="A-"/>
+                    <StringItem index="3" value="B+"/>
+                    <StringItem index="4" value="B"/>
+                    <StringItem index="5" value="B-"/>
+                    <StringItem index="6" value="C+"/>
+                    <StringItem index="7" value="C"/>
+                    <StringItem index="8" value="C-"/>
+                    <StringItem index="9" value="D+"/>
+                    <StringItem index="10" value="D"/>
+                    <StringItem index="11" value="D-"/>
+                    <StringItem index="12" value="E"/>
+                  </StringArray>
+                </Property>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JComboBox" name="txtScs1104">
+              <Properties>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                  <StringArray count="13">
+                    <StringItem index="0" value="A+"/>
+                    <StringItem index="1" value="A"/>
+                    <StringItem index="2" value="A-"/>
+                    <StringItem index="3" value="B+"/>
+                    <StringItem index="4" value="B"/>
+                    <StringItem index="5" value="B-"/>
+                    <StringItem index="6" value="C+"/>
+                    <StringItem index="7" value="C"/>
+                    <StringItem index="8" value="C-"/>
+                    <StringItem index="9" value="D+"/>
+                    <StringItem index="10" value="D"/>
+                    <StringItem index="11" value="D-"/>
+                    <StringItem index="12" value="E"/>
+                  </StringArray>
+                </Property>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JComboBox" name="txtScs1105">
+              <Properties>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                  <StringArray count="13">
+                    <StringItem index="0" value="A+"/>
+                    <StringItem index="1" value="A"/>
+                    <StringItem index="2" value="A-"/>
+                    <StringItem index="3" value="B+"/>
+                    <StringItem index="4" value="B"/>
+                    <StringItem index="5" value="B-"/>
+                    <StringItem index="6" value="C+"/>
+                    <StringItem index="7" value="C"/>
+                    <StringItem index="8" value="C-"/>
+                    <StringItem index="9" value="D+"/>
+                    <StringItem index="10" value="D"/>
+                    <StringItem index="11" value="D-"/>
+                    <StringItem index="12" value="E"/>
+                  </StringArray>
+                </Property>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JComboBox" name="txtScs1106">
+              <Properties>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                  <StringArray count="13">
+                    <StringItem index="0" value="A+"/>
+                    <StringItem index="1" value="A"/>
+                    <StringItem index="2" value="A-"/>
+                    <StringItem index="3" value="B+"/>
+                    <StringItem index="4" value="B"/>
+                    <StringItem index="5" value="B-"/>
+                    <StringItem index="6" value="C+"/>
+                    <StringItem index="7" value="C"/>
+                    <StringItem index="8" value="C-"/>
+                    <StringItem index="9" value="D+"/>
+                    <StringItem index="10" value="D"/>
+                    <StringItem index="11" value="D-"/>
+                    <StringItem index="12" value="E"/>
+                  </StringArray>
+                </Property>
+              </Properties>
             </Component>
           </SubComponents>
         </Container>
